# minimp4

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_zh-TW.md  minimp4.h  minimp4_test.c
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-review.yml  ci.yml  issue-triage.yml  release.yml
docs/: MAINTENANCE_PLAN.md  MAINTENANCE_PLAN_en.md  upstream-review.md
scripts/: pre-commit
tests/: CMakeLists.txt  test_bit_reader.c  test_demux_api.c  test_edge_cases.c  test_h26x_writer.c  test_harness.h  test_hevc.c  test_integration.c  test_mux_api.c  test_nal_parsing.c  test_vector_util.c
tests/fuzz/: fuzz_demux.c  fuzz_mux_nal.c
vectors/: foreman.265
